--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/b10b1d571c.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>MusicWorld</title>
 </head>
 <body>
     <div class="page" id="page1">
